# twig

./: Cargo.toml  README.md  config.toml  llm.md
docs/: CONDITIONALS.md  FEATURES-CHECKLIST.md  FEATURES.md  GIT.md  IP-PROVIDER-DESIGN.md  PLUGINS.md  REFERENCE-mode-tcsh.md  TCSH.md  TODO.md
src/: cache.rs  colors.rs  cwd.rs  cwd_test.rs  env.rs  env_var.rs  env_var_test.rs  git.rs  git_test.rs  host.rs  hostname.rs  hostname_test.rs  ip.rs  ip_test.rs  main.rs  power.rs  template.rs  template_test.rs  time.rs  time_test.rs  variable.rs
twig/: Cargo.toml  config.toml
twig/docs/: FEATURES-CHECKLIST.md
twig/src/: config.rs  main.rs
twig/src/providers/: battery.rs  builtin.rs  git.rs  ip.rs  mod.rs
twig/src/shell/: bash.rs  mod.rs  raw.rs  tcsh.rs  zsh.rs
twigd/: Cargo.toml
twigd/src/: main.rs
~/.config/twig/: config.toml
