[package]
name = "twig"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
clap = { version = "4.5", features = ["derive"] }
hostname = "0.3"
local-ip-address = "0.5"
colored = "2.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rstest = "0.24.0"
regex = "1.10"
tempfile = "3.10"
battery = "0.7.8"                                  # Cross-platform battery information
lazy_static = "1.4"                                # For static initialization
parking_lot = "0.12"                               # For fast, simple mutex
libc = "0.2"                                       # For Unix system calls
fs2 = "0.4"                                        # For file locking
