[workspace]
members = ["twig", "twigd"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
license = "MIT"

[workspace.dependencies]
chrono = "0.4"
gethostname = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
clap = { version = "4", features = ["derive"] }
get_if_addrs = "0.5"
battery = "0.7"
terminal_size = "0.3"
