[package]
name = "twig"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
gethostname.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true
clap.workspace = true
get_if_addrs.workspace = true
battery.workspace = true
terminal_size.workspace = true
